--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.10.1",
-    "fastify": "^4.13.0"
+    "fastify": "^4.13.0",
+    "zod": "^3.20.6"
   }
 }
