--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch ./src/server.ts"
+    "dev": "tsx watch ./src/server.ts",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.14.0",
+    "@types/supertest": "^2.0.12",
     "prisma": "^4.10.1",
+    "supertest": "^6.3.3",
     "tsx": "^3.12.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^0.28.5"
   },
   "dependencies": {
     "@prisma/client": "^4.10.1",
