--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
+
 services:
-  db:
+  development:
     image: postgres
     restart: always
     environment:
@@ -11,3 +12,14 @@ services:
       - '5432:5432'
     volumes:
       - './postgres-data:/var/lib/postgresql/data'
+
+  test:
+    image: postgres:13
+    restart: always
+    container_name: integration-tests-prisma
+    ports:
+      - '5433:5432'
+    environment:
+      POSTGRES_USER: prisma
+      POSTGRES_PASSWORD: prisma
+      POSTGRES_DB: tests
