Added image carrosel

--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rejane_imoveis",
-  "homepage" : "http://www.rejaneimoveisbc.com.br",
+  "homepage": "http://www.rejaneimoveisbc.com.br",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,8 @@
   "dependencies": {
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^9.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
