--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "scrollreveal": "^4.0.9",
     "swiper": "^9.1.0"
   },
