--- a/web/package.json
+++ b/web/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.12",
+    "@hookform/resolvers": "^3.0.0",
     "axios": "^1.3.4",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.7",
+    "react-number-format": "^5.1.4",
     "react-router-dom": "^6.9.0",
     "scrollreveal": "^4.0.9",
-    "swiper": "^9.1.0"
+    "swiper": "^9.1.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
