--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.14.0",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.1",
     "prisma": "^4.10.1",
     "supertest": "^6.3.3",
     "tsx": "^3.12.3",
@@ -24,10 +26,17 @@
     "vitest": "^0.28.5"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.300.0",
     "@fastify/cors": "^8.2.1",
+    "@fastify/multipart": "^7.5.0",
     "@prisma/client": "^4.10.1",
+    "aws-sdk": "^2.1345.0",
     "dotenv-cli": "^7.0.0",
     "fastify": "^4.13.0",
+    "fastify-multer": "^2.0.3",
+    "jimp": "^0.22.7",
+    "multer-s3": "^3.0.1",
+    "uuid": "^9.0.0",
     "zod": "^3.20.6"
   }
 }
