--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,8 @@
   },
   "main": "index.js",
   "scripts": {
+    "build": "tsup src",
+    "start": "node dist/server.js",
     "dev": "dotenv -e .env.development tsx watch ./src/server.ts",
     "migrate:test": "dotenv -e .env.test -- npx prisma migrate deploy",
     "docker:up": "docker-compose up test -d",
@@ -18,7 +20,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/multer-s3": "^3.0.0",
     "@types/node": "^18.14.0",
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.1",
@@ -38,7 +39,7 @@
     "fastify": "^4.13.0",
     "fastify-multer": "^2.0.3",
     "jimp": "^0.22.7",
-    "multer-s3": "^3.0.1",
+    "tsup": "^6.7.0",
     "uuid": "^9.0.0",
     "zod": "^3.20.6"
   }
