--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-drag-drop-files": "^2.3.9",
     "react-hook-form": "^7.43.7",
     "react-number-format": "^5.1.4",
     "react-router-dom": "^6.9.0",
